<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".FragmentosAdministrador.InicioAdmin">

   <androidx.appcompat.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="10dp"
       android:layout_gravity=""
       >

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/Eligeunacategoriatxt"
           android:textColor="#000"
           android:gravity="center"
           android:textSize="25dp"
           />
        <!--       Fila 1-->
       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="2"
           android:layout_marginTop="10dp"
           >
                <!--Películas-->
           <androidx.appcompat.widget.LinearLayoutCompat
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_weight="1"
               android:gravity="center"
               >

               <androidx.appcompat.widget.AppCompatImageView
                   android:layout_width="180dp"
                   android:layout_height="180dp"
                   android:src="@drawable/peliculas"


                   />

               <Button
                   android:id="@+id/Peliculas"
                   android:text="@string/Peliculas"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="#04b4ae"
                   android:textColor="#fff"
                   android:layout_marginTop="10dp"
                   />
           </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Series-->
           <androidx.appcompat.widget.LinearLayoutCompat
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_weight="1"
               android:gravity="center"

               >
               <androidx.appcompat.widget.AppCompatImageView
                   android:layout_width="180dp"
                   android:layout_height="180dp"
                   android:src="@drawable/series"


                   />
               <Button
                   android:id="@+id/Series"
                   android:text="@string/Series"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="#04b4ae"
                   android:textColor="#fff"
                   android:layout_marginTop="10dp"

                   />
           </androidx.appcompat.widget.LinearLayoutCompat>



       </androidx.appcompat.widget.LinearLayoutCompat>

        <!--       Fila 2-->
       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="2"
           android:layout_marginTop="10dp"
           >

           <!--Música-->
           <androidx.appcompat.widget.LinearLayoutCompat
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_weight="1"
               android:gravity="center"
               >
               <androidx.appcompat.widget.AppCompatImageView
                   android:layout_width="180dp"
                   android:layout_height="180dp"
                   android:src="@drawable/musica"


                   />
               <Button
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="#04b4ae"
                   android:textColor="#fff"
                   android:layout_marginTop="10dp"
                   android:text="@string/Musica"
                   android:id="@+id/Musica"

                   />
           </androidx.appcompat.widget.LinearLayoutCompat>

           <!--Video Juegos-->
           <androidx.appcompat.widget.LinearLayoutCompat
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_weight="1"
               android:gravity="center"

               >
               <androidx.appcompat.widget.AppCompatImageView
                   android:layout_width="180dp"
                   android:layout_height="180dp"
                   android:src="@drawable/videojuegos"


                   />
               <Button
                   android:maxWidth="80dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="#04b4ae"
                   android:textColor="#fff"
                   android:layout_marginTop="10dp"

                   android:text="@string/VideoJuegos"
                   android:id="@+id/VideoJuegos"
                   />
           </androidx.appcompat.widget.LinearLayoutCompat>



       </androidx.appcompat.widget.LinearLayoutCompat>

   </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>